# cmake-and-makefile-default

./: CMakeLists.txt  Makefile
